# miso-svg

./: README.md  cabal.project  miso-svg.cabal
src/: Main.hs
static/: index.html
